fixing section spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -8538,6 +8538,11 @@ fieldset:disabled .btn {
   padding-bottom: 3rem !important;
 }
 
+.mypy-6 {
+  padding-top: 3rem !important;
+  padding-bottom: 4rem !important;
+}
+
 .pt-0 {
   padding-top: 0 !important;
 }
